--- a/style.css
+++ b/style.css
@@ -118,3 +118,12 @@ a:hover {
   pointer-events: none;
 }
 
+#binary-bg {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.08;
+}
+
+
