--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body {
   margin: 0;
   background-color: #0b0e11;
   color: #dcdcdc;
-  font-family: 'JetBrains Mono', monospace;
+  font-family: 'VT323', monospace;
+  font-size: 18px;
 }
 
 #terminal {
@@ -123,7 +124,7 @@ a:hover {
   inset: 0;
   width: 100%;
   height: 100%;
-  opacity: 0.08;
+  opacity: 0.06;
 }
 
 
